libtui-ruby (1.15) UNRELEASED; urgency=low

  * cache the distribution so that it's not super slow

 -- Ryan Niebur <ryan@debian.org>  Tue, 10 Aug 2010 17:54:02 -0700

libtui-ruby (1.14) freegeek-test; urgency=low

  * depend on lsb-release

 -- Ryan Niebur <ryan@debian.org>  Tue, 10 Aug 2010 16:11:09 -0700

libtui-ruby (1.13) freegeek-test; urgency=low

  * fix weird characters showing up in lucid (Closes: #19153)

 -- Ryan Niebur <ryan@debian.org>  Tue, 10 Aug 2010 15:52:23 -0700

libtui-ruby (1.12) freegeek-test; urgency=low

  * output special characters to tell readline to ignore the escape
    sequences when determining line length and word wrapping

 -- Ryan Niebur <ryan@debian.org>  Sat, 20 Mar 2010 17:48:17 -0700

libtui-ruby (1.11) freegeek-test; urgency=low

  * add a new function: yes_or_no, like yesNo and noYes, but without a
    default..

 -- Ryan Niebur <ryan@debian.org>  Sat, 20 Feb 2010 11:50:19 -0800

libtui-ruby (1.10) freegeek-test; urgency=low

  * have libtui-ruby depend on the same version of libtui-ruby1.8 as
    itself.

 -- Martin Chase <mchase@freegeek.org>  Sun, 13 Dec 2009 12:05:59 -0800

libtui-ruby (1.9) freegeek-test; urgency=low

  * have the prompt colors set in a constant

 -- Martin Chase <mchase@freegeek.org>  Thu, 10 Dec 2009 16:20:23 -0800

libtui-ruby (1.8) freegeek-test; urgency=low

  [ Vagrant Cascadian ]
  * set Section to public/libs in debian/control to properly register
    that it should be in the "public" component in the apt repository.

 -- Ryan Niebur <ryanryan52@gmail.com>  Sat, 29 Aug 2009 17:07:58 -0700

libtui-ruby (1.7) public; urgency=low

  * again

 -- Ryan Niebur <ryanryan52@gmail.com>  Tue, 23 Dec 2008 14:09:23 -0800

libtui-ruby (1.6) public; urgency=low

  * fix installation

 -- Ryan Niebur <ryanryan52@gmail.com>  Tue, 23 Dec 2008 10:22:57 -0800

libtui-ruby (1.5) public; urgency=low

  * rebuild

 -- Ryan Niebur <ryanryan52@gmail.com>  Mon, 22 Dec 2008 00:28:37 -0800
